# letter-recognition

./: app.py  letter_recognition.py  pyproject.toml  requirements.txt
