[project]
name = "number-recognition"
version = "0.1.0"
description = "Handwritten letter recognition using CNN"
requires-python = ">=3.9,<3.10"
dependencies = [
    "tensorflow>=2.20.0",
    "keras>=3.10.0",
    "numpy>=1.26.4,<2.0",
    "opencv-python>=4.9.0,<4.10",
    "streamlit>=1.50.0",
    "streamlit-drawable-canvas>=0.9.3",
    "pillow>=11.0.0",
    "kagglehub>=0.3.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.3.0,<3.0",
    "protobuf>=6.0.0,<7.0",
]

[project.scripts]
train = "number_recognition:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
